Updated interface to use recorded-activities
Added the database SQL query

Added code to insert activity records
